# BEE-BO

./: .buildinfo  LICENSE  README.md  beebo.html  beebo.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: beebo.doctree  beebo.utils.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: build_docs.yml  python-publish.yml
_modules/: index.html
_modules/beebo/: acquisition.html
_modules/beebo/utils/: cholesky_inference.html
_sources/: beebo.utils.rst.txt  index.rst.txt
beebo/: __init__.py  acquisition.py
beebo/utils/: cholesky_fwd.py  cholesky_inference.py
benchmark/: README.md  batch_regret_0.1.csv  batch_regret_1.0.csv  batch_regret_10.0.csv  best_so_far_0.1.csv  best_so_far_1.0.csv  best_so_far_10.0.csv  compute_metrics.py  multi_round_experiment.py  problems.py  redo_last_round_full_exploit.py  submit.sh  timings.py
benchmark/utils/: kriging_believer.py  rover_utils.py
docs/: beebo.rst  conf.py  index.rst  modules.rst
